# nicetree

./: .gitignore  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  pyproject.toml  verify_installation.py
docs/: DEVELOPMENT.md  GETTING_STARTED.md  USAGE.md
nicetree/: __init__.py  cli.py  formatter.py  tree.py
tests/: test_nicetree.py
